scripts/manifests/exercise.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
  namespace: {username}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: web-server
        image: skabrits/trickster
        ports:
        - containerPort: 80
        volumeMounts:
        - name: db-password-secret
          mountPath: /app/db-creds
          readOnly: true
      volumes:
      - name: db-password-secret
        secret:
          secretName: db-password
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-svc
  namespace: {username}
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
